# Lighting

./: CMakeLists.txt  README.md
Resource/: Colors.vs  GouraudShading.fs  GouraudShading.vs  LightCasters.vs  LightCastersDirectional.fs  LightCastersDirectional.vs  LightCastersPoint.fs  LightCastersPoint.vs  LightCastersSpot.fs  LightingDiffuse.fs  LightingDiffuse.vs  LightingMapsDiffuse.fs  LightingMapsEx4.fs  LightingMapsEx4.vs  LightingMapsSpecular.fs  LightingSpecular.fs  LightingSpecular.vs  LightingSpecularViewSpace.fs  LightingSpecularViewSpace.vs  Materials.fs  Materials.vs  Materials1.fs  MultipleLights.fs
include/: Camera.h  Shader.h
src/: 4.3.lightingmapsEx4
src/1.colors/: Lighting.cpp
src/2.1.basic_lighting_diffuse/: BasicLightingDiffuse.cpp
src/2.1.basiclightingdiffuse/: BasicLightingDiffuse.cpp
src/2.2.basic_lighting_specular/: BasicLightingSpecular.cpp
src/2.2.basiclightingspecular/: BasicLightingSpecular.cpp
src/2.3.basic_lighting_Ex1/: Exercise1.cpp
src/2.3.basiclightingEx1/: Exercise1.cpp
src/2.4.basic_lighting_Ex3/: Exercise3.cpp
src/2.5.basic_lighting_Ex4/: Exercise4.cpp
src/2.5.basiclightingEx4/: Exercise4.cpp
src/3.1.materials/: Materials.cpp
src/3.2.materialslight/: Materials1.cpp
src/3.3.materialsEx1/: MaterialsExercise.cpp
src/4.1.lighting_maps_diffusemap/: LightingMapsDiffuse.cpp
src/4.2.lighting_maps_specularmap/: LightingMapsSpecular.cpp
src/4.3.lightingmapsEx3/: LightingMapsEx3.cpp
src/5.1.lightcasters/: LightCastersDirectional.cpp
src/5.1.lightcastersdirectional/: LightCastersDirectional.cpp
src/5.2.light_casters_point/: LightCastersPoint.cpp
src/5.3.light_casters_spot/: LightCastersSpot.cpp
src/5.4.light_casters_spot_soft/: LightCastersSpotSoft.cpp
src/6.multiple_lights/: MultipleLights.cpp
